2015-05-02  Per Bothner  <per@bothner.com>

	* LispReader.java (parseNumber): If specified as exact, do exact
	calculation even if decimal point or exponent seen.
	Honor radix request even for complex numbers.

2015-04-18  Per Bothner  <per@bothner.com>

	* LispLanguage.java (dots3_sym): New constant.
	* SeqSizeType.java: New constructor.  Re-order arguments
	of old constructor to avoid ambiguity.

2015-04-12  Per Bothner  <per@bothner.com>

	* LispReader.java (handlePostfix): Make protected.

2015-03-18  Per Bothner  <per@bothner.com>

	* LangPrimType.java (boxedStringCursorType): New constant ClassType.
	(boxedType, emitTestIf): Handle stringCursorType.

2015-02-23  Per Bothner  <per@bothner.com>

	* ReaderTypespec.java (read): Allow non-terminating-macro characters.
	After '>' call readToken to handle anything else.
	* LispReader.java (handleToken): New method
	(readAndHandleToken): Use handleToken.

2014-12-22  Per Bothner  <per@bothner.com>

	* LangObjType.java (emitCoercionOrNull): New method.
	(emitTestIf): Use emitCoercionOrNull.

	* SeqSizeType.java: New class, extends LangObjType.

2014-12-21  Per Bothner  <per@bothner.com>

	* LangObjType.java (coercionMethod): For default case, return null
	if getConstructor() returns null.

2014-12-18  Per Bothner  <per@bothner.com>

	* LangObjType.java (emitTestIf): Fix handling for types without
	a coercion method.

2014-12-09  Per Bothner  <per@bothner.com>

	* LangPrimType.java (emitTestIf): Fix handling of boolean,
	character, character-or-eof, and char types.
	(emitIsInstance): Remove special handling for booleans.

2014-11-24  Per Bothner  <per@bothner.com>

	* LispLanguage.java (quasiquote_sym): New constant.
	* LispReader.java (handlePostfix): Use quasiquote rather than quote
	for colon notation.

2014-11-17  Per Bothner  <per@bothner.com>

	* LispLanguage.java (resolve): Error if module has both statements
	and a submodule with the same classname.

2014-11-17  Jamison Hope  <jrh@theptrgroup.com>
