@@ -1,3 +1,10 @@
+2015-05-09  Per Bothner  <per@bothner.com>
+
+	* LispReader.java (SCM_LEXPONENT_IS_BIGDECIMAL): New flags value.
+	(parseNumber): Only map 'l' exponent marker to BigDecimal if above
+	flag is set.
+	* ReadTable.java (extraFlags): New field.
+
 2015-05-02  Per Bothner  <per@bothner.com>
 
 	* LispReader.java (parseNumber): If specified as exact, do exact
